add Thought support
