# src/actor/api_app.rs
@@ -1,15 +1,15 @@
 use axum::extract::{Path, State};
 use axum::http::StatusCode;
 use axum::response::IntoResponse;
+use axum::routing::delete;
 use axum::Json;
 use axum::{routing::post, Router};
 use chrono::DateTime;
 use serde::Deserialize;
 use std::sync::Arc;
 use uuid::Uuid;
-use axum::routing::delete;
 
-use crate::models::{CreateNoteCommand, CreateProjectCommand};
+use crate::models::{CreateNoteCommand, CreateProjectCommand, CreateThoughtCommand};
 use crate::service::{ThoughtService, ThoughtServiceError};
 
 /// Request payload for creating a new note.
@@ -40,6 +40,14 @@ struct CreateProjectRequest {
     pub universe_id: Uuid,
 }
 
+/// Request payload for creating a new thought.
+#[derive(Deserialize)]
+struct CreateThoughtRequest {
+    pub imported_at: DateTime<chrono::Utc>,
+    pub scribe_id: Uuid,
+    pub content: String,
+}
+
 /// ApiApp is an actor that represents the API application.
 pub struct ApiApp {
     thought_service: Arc<ThoughtService>,
@@ -55,6 +63,7 @@ impl ApiApp {
     pub fn router(&self) -> Router {
         Router::new()
             .route("/project/{project_slug}/note", post(create_note))
+            .route("/project/{project_slug}/thought", post(create_thought))
             .route("/project/create", post(create_project))
             .route("/notes/{note_id}", delete(scratch_note))
             .with_state(self.thought_service.clone())
@@ -77,8 +86,50 @@ async fn create_note(
     let note = service.create_note(command).await;
 
     match note {
-        Ok(_) => (StatusCode::CREATED, Json(())),
-        Err(_) => (StatusCode::INTERNAL_SERVER_ERROR, Json(())),
+        Ok(note) => {
+            let headers = [(
+                axum::http::header::LOCATION,
+                format!("/note/{}", note.note_id),
+            )];
+            (StatusCode::CREATED, headers, Json(()))
+        }
+        Err(_) => (
+            StatusCode::INTERNAL_SERVER_ERROR,
+            [(axum::http::header::LOCATION, "".to_string())],
+            Json(()),
+        ),
+    }
+}
+
+/// Create a new thought
+async fn create_thought(
+    State(service): State<Arc<ThoughtService>>,
+    Path(project_slug): Path<String>,
+    Json(payload): Json<CreateThoughtRequest>,
+) -> impl IntoResponse {
+    let command = CreateThoughtCommand {
+        project_slug,
+        imported_at: payload.imported_at,
+        scribe_id: payload.scribe_id,
+        content: payload.content,
+        parent_id: None,
+    };
+
+    let thought = service.create_thought(command).await;
+
+    match thought {
+        Ok(thought) => {
+            let headers = [(
+                axum::http::header::LOCATION,
+                format!("/thought/{}", thought.thought_id),
+            )];
+            (StatusCode::CREATED, headers, Json(()))
+        }
+        Err(_) => (
+            StatusCode::INTERNAL_SERVER_ERROR,
+            [(axum::http::header::LOCATION, String::new())],
+            Json(()),
+        ),
     }
 }
 
@@ -88,23 +139,37 @@ async fn create_project(
     Json(payload): Json<CreateProjectRequest>,
 ) -> impl IntoResponse {
     let command = CreateProjectCommand {
-        project_name: payload.project_name,
+        project_name: payload.project_name.clone(),
         universe_id: payload.universe_id,
     };
 
     let result = service.create_project(command).await;
 
     match result {
-        Ok(_) => (StatusCode::CREATED, Json(())),
+        Ok(project) => {
+            let headers = [(
+                axum::http::header::LOCATION,
+                format!("/project/{}", project.slug),
+            )];
+            (StatusCode::CREATED, headers, Json(()))
+        }
         Err(e)
             if matches!(
                 e.downcast_ref::<ThoughtServiceError>(),
                 Some(ThoughtServiceError::ProjectAlreadyExists(_))
             ) =>
         {
-            (StatusCode::CONFLICT, Json(()))
+            (
+                StatusCode::CONFLICT,
+                [(axum::http::header::LOCATION, String::new())],
+                Json(()),
+            )
         }
-        Err(_) => (StatusCode::INTERNAL_SERVER_ERROR, Json(())),
+        Err(_) => (
+            StatusCode::INTERNAL_SERVER_ERROR,
+            [(axum::http::header::LOCATION, String::new())],
+            Json(()),
+        ),
     }
 }
 
